--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,12 @@ DB_SSL_MODE=disable
 # Minio storage configuration
 # ------------------------
 MINIO_HOST=minio
-MINIO_PORT=9093
-MINIO_ACCESS_KEY=
-MINIO_SECRET=
+MINIO_PORT=9000
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
 MINIO_SSL=false
+# ------------------------
+# Goose migrations configuration
+# ------------------------
+GOOSE_DRIVER=postgres
+GOOSE_MIGRATION_DIR=./migrations
