--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -125,6 +125,16 @@ services:
       timeout: 5s
       retries: 5
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "3000:80"
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
   kafka_data:
